refactored ReflectionUtil to not use depracated method